k8s/overlays/test/ingress-host.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - host: lagrangefi-test.ai-bob.pro
      http:
        paths:
          - path: /me
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 80
  tls:
    - hosts:
        - lagrangefi-test.ai-bob.pro
      secretName: web-tls
